# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fenc=utf-8 sts=4 ts=4 et nomod:

2018-02-20 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add bootstrap and clean_vclocks functionality to cloudi_crdt
      so the CloudI service processes that utilize it may
      restart, start, or fail without affecting its operation
    * Fix external CloudI service Erlang process viewing with
      the format_status/2 callback due to gen_fsm/gen_statem difference

2018-02-17 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix automake subdirs use for distclean
    * Fix minimum Erlang/OTP version (it is now 19.3)
    * Add ordered argument to cloudi_queue
    * Add mcast support to cloudi_queue
    * Add the cloudi_crdt module for replicating an Erlang map
      between internal CloudI services
    * Add cloudi_crdt usage in the Erlang count integration test
      (when the count test is ran with the mode argument as crdt)

2018-01-27 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix cloudi_service_http_rest cloudi_service_init failure handling

2018-01-20 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add check to cause an internal or external service to crash
      if the CloudI API functions subscribe/subscribe_count/unsubscribe 
      are passed a pattern that includes the character sequence "**"

2018-01-19 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Update the Erlang Binary Term Format for
      Go/Javascript/Perl/PHP/Python/Ruby to encode
      nil/undefined/undef/NULL/None as an undefined Erlang atom

2018-01-06 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix logging syslog handling to ensure misconfigured syslog
      settings will not cause a crash if the settings are set
      dynamically and add log output with the error information
    * Update syslog_socket

2018-01-05 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix Javascript CloudI API to no longer have a busy-wait
      problem when blocking on poll
