@@ -1,6 +1,10 @@
 # -*- coding: utf-8; tab-width: 4; -*-
 # ex: set fenc=utf-8 sts=4 ts=4 et nomod:
 
+2018-02-21 Michael Truog   <mjtruog [at] gmail (dot) com>
+
+    * Add the cloudi_crdt:update functions
+
 2018-02-20 Michael Truog   <mjtruog [at] gmail (dot) com>
 
     * Add bootstrap and clean_vclocks functionality to cloudi_crdt
